[package]
name = "generate-wgsl-oil"
version = "0.2.8"
edition = "2021"
license = "MIT"
description = "Includes a WGSL file with the `naga-oil` preprocessor. "
homepage = "https://github.com/ktravis/generate-wgsl-oil"
repository = "https://github.com/ktravis/generate-wgsl-oil"
readme = "README.md"
keywords = ["gamedev", "graphics", "wgsl", "wgpu", "shader"]
categories = ["game-development", "graphics"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
naga = { version = "24.0", features = ["wgsl-in", "wgsl-out"] }
naga_oil = "0.17"
naga-to-tokenstream = { git = "https://github.com/ktravis/naga-to-tokenstream" }
proc-macro2 = "1.0"
quote = "1.0"
glob = "0.3"
pathdiff = "0.2"
regex = "1.9"
lazy_static = "1.5"
daggy = "0.8"
prettyplease = { version = "0.2.29", optional = true }

# Try to get cargo to match versions with naga and naga_oil by having a huge range
data-encoding = "2" 

[dev-dependencies]
encase = {version = "0.9", features = ["glam"]}
glam = "0.28"

[features]
default = ["prettyplease"]
minify = ["naga-to-tokenstream/minify"]
prettyplease = ["dep:prettyplease"]
bytemuck = []
glam = []
naga = []
encase = []
